--- a/.stackbit/models/TestimonialsSection.yaml
+++ b/.stackbit/models/TestimonialsSection.yaml
@@ -6,7 +6,7 @@ fields:
   - type: string
     name: title
   - type: list
-    name: logos
+    name: testimonials
     items:
       type: object
       fields:
