TestimonialsSection.yaml: changed

--- a/.stackbit/models/TestimonialsSection.yaml
+++ b/.stackbit/models/TestimonialsSection.yaml
@@ -11,6 +11,6 @@ fields:
       type: object
       fields:
         - type: string
-          name: name
+          name: mainContent
         - type: image
           name: image
