TestimonialsSection.yaml: changed

--- a/.stackbit/models/TestimonialsSection.yaml
+++ b/.stackbit/models/TestimonialsSection.yaml
@@ -13,4 +13,4 @@ fields:
         - type: string
           name: mainContent
         - type: string
-          name: image
+          name: author
